--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,22 +1,48 @@
-#header-principal{
-	/*display: flex;*/
-	min-height:200px;
-	/*margin: 10px;*/
-	background-color: #cce0ff;
-}
-header p{
-	font-family: sans-serif;
-	font-style: italic;
-	font-size: 12px;
-
-}
-
 #logo{
 	display:flex;
 	float: right;
 	width: 300px;
 	height:150px;
 }
+.img-ajuste{
+	width: 100%;
+	height: 140px;
+}
+.bi-person-workspace{
+	color: aliceblue;
+}
+.container-footer{
+	bottom: 0;
+	position: page;
+	width: 100%;
+}
+.container-Card{
+	margin-top: 30px;
+	margin-right: 70px;
+	margin-bottom: 30px;
+}
+.card{
 
-
-
+}
+.body-loginRistroCiudadano{
+	background: url("/images/imgFondo1.jpg");
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+	width: 100%;
+}
+body{
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+.container-footer{
+	margin-top: auto;
+}
+.body-registroCiudadano{
+	background: url("/images/RegistroCiudadano1.jpg");
+	background-size: cover;
+	background-position: center;
+	height: 70%;
+	width: auto;
+}
