--- a/src/main/resources/templates/LoginEmpleador.html
+++ b/src/main/resources/templates/LoginEmpleador.html
@@ -2,14 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Login Ciudadano</title>
+    <title>Login Empleador</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 </head>
-<body class="body-registroCiudadano">
+<body class="body-registroEmpleador">
 
 <!-- Barra de Navegacion -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -43,7 +43,7 @@
     <main>
         <div class="py-5 text-center">
             <img class="d-block mx-auto mb-4" src="/images/logoLoginCiudadano.png" alt="" width="72" height="57">
-            <h2  class="text-primary">INGRESO DE DATOS CIUDADANO</h2>
+            <h2  class="text-primary">INGRESO DE DATOS EMPLEADOR</h2>
             <p class="lead text-white">Ingresa tus datos correctamente para poder loguearte</p>
         </div>
         <div class="row g-5 d-flex justify-content-center">
@@ -51,13 +51,13 @@
                 <form class="needs-validation" novalidate>
                     <div class="row g-3">
                         <div class="col-12">
-                            <label for="idDniCiudadano" class="form-label text-white">D.N.I</label>
-                            <input type="number" class="form-control" id="idDniCiudadano" placeholder="Ingrese DNI" value="" required>
+                            <label for="idCuit" class="form-label text-white">C.U.I.T</label>
+                            <input type="number" class="form-control" id="idCuit" placeholder="Ingrese cuit (sin guiones)" value="" required>
                         </div>
 
                         <div class="col-12">
-                            <label for="idContraseñaCiudadano" class="form-label text-white" >Contraseña</label>
-                            <input type="password" class="form-control" id="idContraseñaCiudadano" placeholder="Ingrese contraseña" value="" required>
+                            <label for="idContraseñaEmpleador" class="form-label text-white" >Contraseña</label>
+                            <input type="password" class="form-control" id="idContraseñaEmpleador" placeholder="Ingrese contraseña" value="" required>
                         </div>
 
                     </div>
@@ -71,9 +71,9 @@
 </div>
 
 
-    <footer th:replace="/layouts/footer :: footer"></footer>
-    <script type="text/javascript" th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/popper.js/2.9.3/umd/popper.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
+<footer th:replace="/layouts/footer :: footer"></footer>
+<script type="text/javascript" th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/popper.js/2.9.3/umd/popper.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
 </body>
 </html>
