--- a/src/main/resources/templates/RegistroEmpleador.html
+++ b/src/main/resources/templates/RegistroEmpleador.html
@@ -2,14 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Registro Ciudadano</title>
+    <title>Registro Empleador</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 </head>
-<body class="body-registroCiudadano">
+<body class="body-registroEmpleador">
 
 <!-- Barra de Navegacion -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -44,38 +44,32 @@
     <main>
         <div class="py-5 text-center">
             <img class="d-block mx-auto mb-4" src="/images/logoRegistroCiudadano.png" alt="" width="72" height="57">
-            <h2  class="text-primary">INGRESO DE DATOS CIUDADANO</h2>
+            <h1  class="text-white">INGRESO DE DATOS EMPLEADOR</h1>
             <p class="lead text-muted">Ingresa tus datos correctamente para poder registrarte</p>
         </div>
 
         <div class="row g-5 d-flex justify-content-center">
             <div class="col-md-7 col-lg-8">
-                <form class="needs-validation" >
+                <form class="needs-validation" novalidate>
                     <div class="row g-3">
                         <div class="col-sm-6">
-                            <label for="idDniCiudadano" class="form-label text-white">D.N.I</label>
-                            <input type="number" class="form-control" id="idDniCiudadano" placeholder="Ingrese DNI" value="" required>
+                            <label for="firstDni" class="form-label text-white">C.I.U.T</label>
+                            <input type="number" class="form-control" id="firstDni" placeholder="Ingrese ciut (sin guiones)" value="" required>
                         </div>
 
                         <div class="col-sm-6">
-                            <label for="NroTramite" class="form-label text-white">Nro de Tramite</label>
-                            <input type="number" class="form-control" id="NroTramite" placeholder="Ingrese nro de tramite" value="" required>
+                            <label for="idContraseña" class="form-label text-white">Contraeña</label>
+                            <input type="text" class="form-control" id="idContraseña" placeholder="Ingrese contraseña" value="" required>
                         </div>
 
                         <div class="col-12">
-                            <label for="email" class="form-label text-white">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Ingrese email">
+                            <label for="idRazonSocial" class="form-label text-white">Razon Social</label>
+                            <input type="text" class="form-control" id="idRazonSocial" placeholder="Ingrese razon social">
                         </div>
 
                         <div class="col-12">
-                            <label for="country" class="form-label text-white">Estado Civil</label>
-                            <select class="form-select" id="idEstadoCivil" required>
-                                <option selected>Ingrese un opcion</option>
-                                <option value="1">Casado</option>
-                                <option value="2">Soltero</option>
-                                <option value="3">Divorciado</option>
-                                <option value="4">Viudo</option>
-                            </select>
+                            <label for="idNombreComercial" class="form-label text-white">Nombre Comercial</label>
+                            <input type="text" class="form-control" id="idNombreComercial" placeholder="Ingrese nombre comercial">
                         </div>
 
                         <div class="col-12">
@@ -114,13 +108,29 @@
                         </div>
 
                         <div class="col-md-5">
-                            <label for="idFechaNacimiento" class="form-label text-white">Ingrese Fecha de Nacimiento</label>
-                            <input type="date" class="form-control" id="idFechaNacimiento" required>
+                            <label for="idInicioActividad" class="form-label text-white">Inicio de Actividad</label>
+                            <input type="date" class="form-control" id="idInicioActividad" required>
                         </div>
 
                         <div class="col-12">
                             <label for="idContraseña" class="form-label text-white">Contraseña</label>
                             <input type="text" class="form-control" id="idContraseña" placeholder="Ingrese Contraseña" value="" required>
+                        </div>
+                        <div class="col-12">
+                            <label for="idEmail" class="form-label text-white">Email</label>
+                            <input type="email" class="form-control" id="idEmail" placeholder="Ingrese email" value="">
+                        </div>
+                        <div class="col-12">
+                            <label for="idDomicilio" class="form-label text-white">Domicilio</label>
+                            <input type="text" class="form-control" id="idDomicilio" placeholder="Ingrese domicilio" value="">
+                        </div>
+                        <div class="col-12">
+                            <label for="idPaginaWeb" class="form-label text-white">Pagina Web</label>
+                            <input type="text" class="form-control" id="idPaginaWeb" placeholder="Ingrese pagina web" value="">
+                        </div>
+                        <div class="col-12">
+                            <label for="idDescripcion" class="form-label text-white">Descripcion</label>
+                            <input type="text" class="form-control" id="idDescripcion" placeholder="Ingrese descripcion" value="">
                         </div>
                     </div>
                     <br>
@@ -133,9 +143,9 @@
 
 </div>
 
-    <footer th:replace="/layouts/footer :: footer"></footer>
-    <script type="text/javascript" th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/popper.js/2.9.3/umd/popper.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
+<footer th:replace="/layouts/footer :: footer"></footer>
+<script type="text/javascript" th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/popper.js/2.9.3/umd/popper.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
 </body>
 </html>
